aws/ingress/ingress-spec.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: action-ingress
  namespace: bazelgrpc
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip # Add this annotation
    alb.ingress.kubernetes.io/security-groups: sg-07a590c0607305fe5
    alb.ingress.kubernetes.io/load-balancer-attributes: "routing.http2.enabled=true"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]' alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-southeast-1:1234567891011:certificate/some-UID"
spec:
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: action-bazelgrpc
              servicePort: 80
    - https:
        paths:
          - path: /
            backend:
              serviceName: action-bazelgrpc
              servicePort: 80
